fix scrollbars

--- a/src/tailwind.sass
+++ b/src/tailwind.sass
@@ -185,9 +185,7 @@ iframe {
 	@apply block
 		!important;
 
-	@apply w-screen
-		h-screen
-		border-0
+	@apply border-0
 		border-white
 		border-solid;
 
